fix: Green cards title not always visible

--- a/components/canvas/Node.module.scss
+++ b/components/canvas/Node.module.scss
@@ -85,6 +85,6 @@
   overflow-wrap: break-word !important;
 }
 
-.description--placeholder {
+.header {
   opacity: 0.4;
 }
